fix horizontal and vertical overflow.

--- a/website/src/static/css/style.css
+++ b/website/src/static/css/style.css
@@ -62,13 +62,20 @@ main {
     display: flex;
     flex-direction: column;
     flex-grow: 1;
+    /* Needed to force horizontal overflow in child */
+    max-width: 50%;
 }
 
 .output {
-    border: 1px solid black;
+    outline: 1px solid black;
     color: gray;
-    overflow: auto;
     flex: 1;
+    padding: 3px;
+    font-family: monospace;
+    font-size: 16px;
+    /* Needed to force vertical overflow in child */
+    max-height: 100%;
+    overflow: auto;
 }
 
 .flex-col {
